0.83.13
  - DOSBox-X can now resolve file paths in its config
    options that include environment variables on non-
    Windows platforms (e.g. ${HOME}..) as well. (Wengier)
  - System menu text in Windows builds now match the text
    in the drop-down menus to be translatable. (Wengier)
  - The error "Access Denied" is returned instead of
    "File not found" for files opened exclusively in
    another program on mounted local drives. (Wengier)
  - S386C928 hardware cursor fixed to divide X coordinate
    by bytes per pixel indicated in the control register
    to match apparent Windows 3.1/95 behavior. Cursor
    now tracks host properly even in highcolor/truecolor
    modes.
  - Added support for the RetroWave OPL3 hardware player.
    Set "oplemu=retrowave_opl3" in [sblaster] section of
    the config file to use it. Config options including
    "retrowave_bus", "retrowave_spi_cs", "retrowave_port"
    are added to adjust its settings. (ClassicOldSong)
  - Added support for S386C928 hardware cursor color
    selection in 256-color mode, which is different
    from later cards.
  - S3 XGA "BYTE SWP" fixed only to byte swap if the
    transfer is 16-bit wide. This fixes the dither
    pattern drawn by Windows 95/98 when you select
    "Shutdown" from the Start menu.
  - Added config options "working directory option" and
    "working directory default" in [dosbox] section of
    the config file to provide various options for the
    users to control DOSBox-X's working directory. For
    example, DOSBox-X can use the primary config file
    directory or the DOSBox-X program directory as its
    working directory. You can view the DOSBox-X'safe
    working directory with CONFIG -L command. DOSBox-X
    is also able to save the working directory that a
    user selects to global config files. (Wengier)
  - DOSBox-X will now also try to read the config file
    named dosbox-x.conf in the user config directory
    when searching for config files at start.