@@ -111,6 +111,11 @@ logfile =
 # working directory default: The default directory to act as DOSBox-X's working directory. See also the setting "working directory option".
 #                              For working directory option=prompt, the specified directory becomes the default directory for the folder selection.
 #     show advanced options: If set, the Configuration Tool will display all config options (including advanced ones) by default.
+#       resolve config path: If set to true, DOSBox-X will resolve options containing paths in the config file (except [autoexec] section).
+#                              This includes environment variables (%VAR% [DOS/Windows] or ${VAR} [Linux/macOS] and tilde (~) in Linux/macOS.
+#                              If set to dosvar, DOSBox-X forces to resolve DOS-style environment variables (%VAR%) in all platforms (and tilde).
+#                              If set to tilde, DOSBox-X will only resolve tilde (~) in Linux/macOS but will not resolve environment variables.
+#                              Possible values: true, false, dosvar, tilde, 1, 0.
 #                   hostkey: By default, DOSBox-X uses the mapper-defined host key, which defaults to F11 on Windows and F12 on other platforms.
 #                              You may alternatively specify a host key with this setting and bypass the host key as defined in the mapper.
 #                              This can also be done from the menu ("Main" => "Select host key").
@@ -148,6 +153,7 @@ quit warning              = auto
 working directory option  = default
 working directory default = 
 show advanced options     = false
+resolve config path       = true
 hostkey                   = mapper
 mapper send key           = ctrlaltdel
 synchronize time          = false
