@@ -25,6 +25,7 @@
 #include <stdlib.h>
 #include <sys/types.h>
 #include <sys/stat.h>
+#include <regex>
 
 #if defined(MACOSX)
 std::string MacOSXEXEPath;
@@ -47,10 +48,9 @@ std::string MacOSXResPath;
 #define _mkdir(x) mkdir(x)
 #endif
 
-#if !defined(WIN32) && !defined(OS2)
-#include <regex>
-void autoExpandEnvironmentVariables(std::string & text) {
-    static std::regex env("\\$\\{([^}]+)\\}");
+int resolveopt = 1;
+void autoExpandEnvironmentVariables(std::string & text, bool dosvar) {
+    static std::regex env(dosvar?"\\%([^%]+)%":"\\$\\{([^}]+)\\}");
     std::smatch match;
     while (std::regex_search(text, match, env)) {
         const char * s = getenv(match[1].str().c_str());
@@ -58,21 +58,27 @@ void autoExpandEnvironmentVariables(std::string & text) {
         text.replace(match[0].first, match[0].second, var);
     }
 }
-#endif
 
-// Resolve environment variables (%VAR% [DOS/Windows] or ${VAR} [Linux/macOS], and tildes (~) in Linux/macOS)
+// Resolve environment variables (%VAR% [DOS/Windows] or ${VAR} [Linux/macOS]), and tilde (~) in Linux/macOS
 void ResolvePath(std::string& in) {
-#if defined(WIN32) || defined(OS2)
+    if (!resolveopt) return;
+#if defined(WIN32)
+    if (resolveopt==3) return;
+    if (resolveopt==2) {autoExpandEnvironmentVariables(in, true);return;}
     char path[300],temp[300],*tempd=temp;
     strcpy(tempd, in.c_str());
     if (strchr(tempd, '%')&&ExpandEnvironmentStrings(tempd,path,300))
         tempd=path;
     in=std::string(tempd);
+#elif defined(OS2)
+    if (resolveopt==3) return;
+    autoExpandEnvironmentVariables(in, true);
 #else
     struct stat test;
     if (stat(in.c_str(),&test))
         Cross::ResolveHomedir(in);
-    autoExpandEnvironmentVariables(in);
+    if (resolveopt==3) return;
+    autoExpandEnvironmentVariables(in, resolveopt==2);
 #endif
 }
 
