@@ -890,9 +890,9 @@ void DOS_Shell::ProcessCmdLineEnvVarStitution(char *line) {
 				 *
 				 * C:\>echo %PATH %
 				 * %PATH % */
-				if (isalpha(*r) || *r == '_' || *r == ' ') { /* must start with a letter. Space and underline are apparently valid too. (MS-DOS 7/Win9x) */
+				if (isalpha(*r) || *r == '_' || *r == '~' || *r == '!' || *r == ' ') { /* must start with a letter. Space and some special symbols like _ are apparently valid too. (MS-DOS 7/Windows 9x) */
 					if (*r == ' ') spaces++;
-					else if (isalpha(*r) || *r == '_') chars++;
+					else if (isalpha(*r) || *r == '_' || *r == '~' || *r == '!') chars++;
 
 					r++;
 					while (*r != 0 && *r != '%') {
